[package]
name = "part-06-cpp-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
autocxx = "0.23.1"

[build-dependencies]
autocxx-build = "0.23.1"
miette = { version = "5", features = ["fancy"]}

